Fix button alignment on services image columns

--- a/wp-content/themes/understrap-child/sass/theme/_child_theme_services.scss
+++ b/wp-content/themes/understrap-child/sass/theme/_child_theme_services.scss
@@ -8,9 +8,14 @@
 }
 
 // when header text stack breaks to 2 lines
-@media (min-width: 992px) {  
-	#renegade_services,
+@media (max-width:991px) {
+    #renegade_services,
     #services {
+        .image-text-wrapper {
+            .bt-fixed {
+                padding: 0;
+            }
+        }
         .image-text-wrapper {
             .image-text-stack {
                 min-height: 8rem;    
